--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-touch .gitignore
-```
-
-Then open it in VS Code and paste this:
-```
 # Virtual environment folder (CRUCIAL)
 venv/
 .venv/
@@ -23,3 +18,6 @@ logs/
 
 # Pytest cache
 .pytest_cache/
+
+# User data (don't commit personal conversations)
+data/
