test: add comprehensive unit tests and reorganize test suite
- Add 21 unit tests covering crisis detection, muting, routing, violations
- Rename test files for clarity (unit/integration/error_handling)
- Fix crisis detection patterns (add 'kill my', handle 'suicide mission')
- Fix datetime deprecation warning in logger
- Update .gitignore for user data and editor configs

--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,12 @@ logs/
 # Pytest cache
 .pytest_cache/
 
-# User data (don't commit personal conversations)
-data/
+# User data - should never be committed
+data/history.json
+data/ledger.json
+logs/*.log
+
+# Editor configs
+.vscode/
+.idea/
+*.swp
